# fireapp_backend

./: .env  Cargo.toml  TODO  docker-compose.yml
db/: db.sqlite
migrations/2020-11-29-202617_create_reports_table/: up.sql
src/: main.rs  report.rs
static/: index.html.tera
