[package]
name = "fireapp_backend"
version = "0.1.0"
authors = ["dmitry.chepurovskiy"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["tera_templates", "diesel_sqlite_pool", "serve"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"

[dev-dependencies]
parking_lot = { version = "0.10", features = ["nightly"] }
rand = "0.6"
