[package]
name = "fireapp_backend"
version = "0.1.0"
authors = ["dmitry.chepurovskiy"]
edition = "2018"

[dependencies]
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["postgres", "r2d2", "uuidv07"] }
diesel_migrations = "1.3"
log = "0.4"
env_logger = "0.8.2"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
